add: projects objects, widgets, windows

--- a/cmake/linuxtag/CMakeLists.txt
+++ b/cmake/linuxtag/CMakeLists.txt
@@ -3,3 +3,6 @@ project(linuxtag LANGUAGES CXX)
 include(../setup.cmake)
 
 add_subdirectory(hello)
+add_subdirectory(objects)
+add_subdirectory(widgets)
+add_subdirectory(windows)
